# slint-chatbot-demo

./: Cargo.toml  README.md
src/: llmengin.rs  main.rs
ui/: appwindow.slint
