[package]
name = "slint-chatbot-demo"
version = "0.1.0"
authors = ["daoga"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5.1"
anyhow = "1.0.81"
candle-core = { version = "0.4.1", features = ["metal"] }
candle-transformers = { version = "0.4.1", features = ["metal"] }
clap = "4.5.3"
hf-hub = "0.3.2"
tokenizers = "0.15.2"

[build-dependencies]
slint-build = "1.5.1"
